--- a/style.css
+++ b/style.css
@@ -29,28 +29,45 @@ h1 {
     color: aliceblue;
 }
 
+/* main banner */
 .bgimage {
-    background-image: url(images/background.jpg);
+    position: relative;
     height: 75vh;
     width: 100%;
+    margin: 100px auto 0;
+    border-radius: 5px;
+    overflow: hidden;
+    opacity: 0.7;
+}
+
+.bgimage::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(images/background.jpg);
     background-size: cover;
-    position: relative;
     background-position: center;
-    margin-right: auto;
-    margin-left: auto;
-    margin-top: 100px;
-    border-radius: 10px;
-    border: none;
 }
 
 /* text css above hero image*/
+.hero-text {
+    position: relative;
+    z-index: 1;
+    color: #FFF;
+}
+
 .hero_title {
     font-size: 4.5rem;
     color: orange;
 }
+
 .hero_desc {
     font-size: 2rem;
 }
+
 .hero-text {
     text-align: center;
     position: absolute;
