--- a/style.css
+++ b/style.css
@@ -33,23 +33,25 @@ h1 {
 .bgimage {
     position: relative;
     height: 75vh;
-    width: 100%;
-    margin: 100px auto 0;
-    border-radius: 5px;
-    overflow: hidden;
-    opacity: 0.7;
+    color: white;
 }
 
 .bgimage::before {
     content: '';
+	position: absolute;
+    inset: 0;
+	background: rgba(15, 21, 37, .8);
+	z-index: -1;
+}
+
+video {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(images/background.jpg);
-    background-size: cover;
-    background-position: center;
+    object-fit: cover;
+    z-index: -2;
 }
 
 /* text css above hero image*/
