--- a/style.css
+++ b/style.css
@@ -1,11 +1,42 @@
 .mybackground {
     position: relative;
-    background: url(images/milky.png) no-repeat;
+    height: 100%;
+    overflow: hidden;
+  }
+  
+  .mybackground::before,
+  .mybackground::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     background-size: cover;
-    height: 90%;
     background-position: center;
-}
-
+    transition: opacity 15.0s ease-in-out;
+    z-index: -1; 
+  }
+  
+  .mybackground::before {
+    background-image: url('images/pawel-czerwinski-XSUTi5soZD0-unsplash.jpg');
+    opacity: 1;
+  }
+  
+  .mybackground::after {
+    background-image: url('images/milky.png');
+    opacity: 0;
+  }
+  
+  .mybackground:hover::before {
+    opacity: 0;
+  }
+  
+  .mybackground:hover::after {
+    opacity: 1;
+  }
+  
+  
 a {
     letter-spacing: 0.6px;
     text-transform: uppercase;
@@ -143,9 +174,6 @@ video {
     cursor: pointer;
 }
 
-.social-icons:hover a {
-    transform: scale(1.4);
-}
 
 .fa-facebook:hover,.fa-instagram:hover,.fa-twitter:hover,.fa-linkedin:hover, .fa-twitch:hover {
     color: #008000;
@@ -163,7 +191,7 @@ video {
 
 /* spacing on all sections */
 #about, #services, #portfolio, #contact {
-    margin-top: 4rem;
+    /* margin-top: 2rem; */
     padding-top: 4rem;
 }
 #contact {
