--- a/src/App.css
+++ b/src/App.css
@@ -699,12 +699,12 @@ input[type="checkbox"] {
 
 
 .technologies button {
-  margin: 0.5rem;
-  padding: 0.5rem 1.5rem;
+  margin: 0.3rem;
+  padding: 0.3rem 1rem;
   border: none;
   background-color: crimson;
   color: #fff;
-  font-size: medium;
+  font-size: 14px;
   border-radius: 5px;
   transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border 0.2s ease-in-out;
 }
