--- a/src/App.css
+++ b/src/App.css
@@ -154,10 +154,10 @@ h2 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 15px 85.333px;
+  padding: 15px 40px;
   background: var(--white);
   box-shadow: 0px 5.333px 80px 0 rgba(0, 0, 0, 0.1);
-  position: fixed;
+  /* position: fixed; */
   top: 0;
   left: 0;
   right: 0;
@@ -239,7 +239,7 @@ h2 {
 /* Skills Section Style */
 .skills--section {
   display: flex;
-  padding: 149.33px 85.33px;
+  padding: 149.33px 10px;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
@@ -260,7 +260,7 @@ h2 {
 }
 .skills--section--card {
   display: flex;
-  padding: 32px;
+  padding: 10px;
   flex-direction: column;
   align-items: flex-start;
   gap: 32px;
@@ -294,8 +294,8 @@ h2 {
 }
 .skills--section--title {
   color: var(--heading-color);
-  font-size: 32px;
-  font-weight: 700;
+  font-size: 16px;
+  font-weight: 500;
   line-height: 45px;
 }
 .skills--section--description {
@@ -310,7 +310,7 @@ h2 {
 /* About Us */
 .about--section {
   display: grid;
-  padding: 133.3px 85.3px;
+  padding: 133.3px 20px;
   align-items: center;
   gap: 114.6px;
   grid-template-columns: repeat(2, 1fr);
@@ -324,7 +324,7 @@ h2 {
 /* My Portfolio Starts */
 .portfolio--section {
   display: flex;
-  padding: 112px 85px;
+  padding: 112px 10px;
   flex-direction: column;
   align-items: flex-start;
   gap: 80px;
@@ -397,7 +397,7 @@ h2 {
 /* Testimonial */
 .testimonial--section {
   display: flex;
-  padding: 112px 84.3px;
+  padding: 112px 20px;
   flex-direction: column;
   align-items: flex-start;
   gap: 80px;
